# Miniproj

./: .gitignore  .gitlab-ci.yml  CITATION.cff  Cargo.toml  LICENSE.md  README.md  build.rs
epsg-coordoperations/: Cargo.toml
epsg-coordoperations/src/: lib.rs  traits.rs
epsg-coordoperations/src/ops/: ellipsoid.rs  lambert_azimuthal_equal_area.rs  mod.rs  transverse_mercator.rs
epsg-geodetic-parameter-gen/: Cargo.toml
epsg-geodetic-parameter-gen/data/: parameters.sqbpro
epsg-geodetic-parameter-gen/src/: db.rs  helpers.rs  lib.rs  types.rs  types.rs.old
miniproj/: Cargo.toml  README.md  build.rs
miniproj-epsg-registry/: Cargo.toml  README.md
miniproj-epsg-registry/data/: PostgreSQL_FKey_Script.sql  PostgreSQL_Table_Script.sql  parameters.sqbpro  terms.md
miniproj-epsg-registry/examples/: conversion_graph.rs
miniproj-epsg-registry/src/: db.rs  helpers.rs  lib.rs  net.rs  sql.rs
miniproj-ops/: Cargo.toml  README.md
miniproj-ops/src/: lib.rs  traits.rs  types.rs
miniproj-ops/src/methods/: albers_equal_area.rs  ellipsoid.rs  helmert.rs  identity_projection.rs  lambert_azimuthal_equal_area.rs  lambert_conic_conformal.rs  mod.rs  molodensky_badekas.rs  popvis_pseudo_mercator.rs  stereographic.rs  transverse_mercator.rs
miniproj-ops/src/ops/: albers_equal_area.rs  ellipsoid.rs  identity_projection.rs  lambert_azimuthal_equal_area.rs  lambert_conic_conformal.rs  mod.rs  popvis_pseudo_mercator.rs  stereographic.rs  transverse_mercator.rs  zero_projection.rs  zero_transformation.rs
miniproj/src/: ellipsoid_constructor.rs  lib.rs  projection_constructor.rs
src/: ellipsoid.rs  ellipsoid_constructor.rs  lambert_azimuthal_equal_area.rs  lib.rs  params.rs  projection_constructor.rs  stereographic.rs  traits.rs  transverse_mercator.rs  zero_transformation.rs
