[package]
name = "epsg-geodetic-parameters"
version = "0.1.0"
authors = ["Flemming Stäbler <fstaebler@geomar.de>"]
edition = "2021"
license-file = "../../../LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
epsg-geodetic-parameter-gen = {path="./epsg-geodetic-parameter-gen"}

[dev-dependencies]
assert_float_eq = "1.1.3"

[dependencies]
phf = { version = "0.11", default_features = false}