[workspace]
members = [
    "miniproj",
    "miniproj-epsg-registry", 
    "miniproj-ops"
]
default-members = ["miniproj"]

[workspace.package]
license-file = "LICENSE.md"
authors = ["Flemming Stäbler <fstaebler@geomar.de>", "Valentin Buck <vbuck@geomar.de>"]
edition="2021"
description="This crate implements geographic transformations between different coordinate systems defined by the [European Petroleum Survey Group](https://epsg.org/home.html)."
readme = "README.md"
repository = "https://git.geomar.de/flemming-staebler/miniproj/"