[workspace]
members = [
    "miniproj",
    "miniproj-epsg-registry", 
    "miniproj-ops"
]
default-members = ["miniproj"]

[workspace.package]
license-file = "LICENSE.md"
authors = ["Flemming Stäbler <fstaebler@geomar.de>", "Valentin Buck <vbuck@geomar.de>"]
edition="2021"
description="This crate implements general and specific geodetic operations like geographic projections."
readme = "README.md"
repository = "https://git.geomar.de/flemming-staebler/miniproj/"