[package]
name = "epsg-geodetic-parameter-gen"
version = "0.1.0"
authors = ["Flemming Stäbler <fstaebler@geomar.de>"]
edition = "2018"
license-file = "../../../../../LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version ="0.29", features = ["bundled"] }
phf = { version = "~0.11.1", default_features = false}
phf_codegen = "~0.11.1"
epsg-coordoperations = {path="../epsg-coordoperations"}