[package]
name = "miniproj-epsg-registry"
version = "0.9.0"
edition="2021"
license-file = "../LICENSE.md"
authors = ["Flemming Stäbler <fstaebler@geomar.de>", "Valentin Buck <vbuck@geomar.de>"]
description="This crate implements code-generation for miniproj"
readme = "README.md"
repository = "https://git.geomar.de/flemming-staebler/miniproj/"
categories = ["science::geo"]
keywords = ["geography", "projection", "codegen", "epsg", "geodesy"]

[dependencies]
rusqlite = { version ="0.29", features = ["bundled"] }
phf = { version = "~0.11.1", default_features = false}
phf_codegen = "~0.11.1"
miniproj-ops= {version="0.9.0", path="../miniproj-ops"}