[package]
name = "miniproj-ops"
version = "0.5.0"
edition="2021"
license-file = "../LICENSE.md"
authors = ["Flemming Stäbler <fstaebler@geomar.de>", "Valentin Buck <vbuck@geomar.de>"]
description="This crate implements geodetic operations used in the miniproj crate."
readme = "../README.md"
repository = "https://git.geomar.de/flemming-staebler/miniproj/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_float_eq = "1.1.3"