[package]
name = "miniproj"
version = "0.2.0"
edition="2021"
license-file = "../LICENSE.md"
authors = ["Flemming Stäbler <fstaebler@geomar.de>", "Valentin Buck <vbuck@geomar.de>"]
description="This crate implements geographic transformations between different coordinate systems defined by the European Petroleum Survey Group."
readme = "../README.md"
repository = "https://git.geomar.de/flemming-staebler/miniproj/"
categories = ["science::geo"]
keywords = ["geography", "projection", "maps", "epsg", "geodesy"]

[build-dependencies]
miniproj-epsg-registry = {version="0.1.1", path="../miniproj-epsg-registry"}

[dependencies]
phf = { version = "~0.11.1", default_features = false}
miniproj-ops= {version="0.1.0", path="../miniproj-ops"}