[package]
name = "miniproj"
version = "0.6.0"
edition="2021"
license-file = "../LICENSE.md"
authors = ["Flemming Stäbler <fstaebler@geomar.de>", "Valentin Buck <vbuck@geomar.de>"]
description="This crate implements general and specific geodetic operations like geographic projections."
readme = "../README.md"
repository = "https://git.geomar.de/flemming-staebler/miniproj/"
categories = ["science::geo"]
keywords = ["geoprocessing", "projection", "mapping", "epsg", "geodesy"]

[build-dependencies]
miniproj-epsg-registry = {version="0.6.0", path="../miniproj-epsg-registry"}

[dependencies]
phf = { version = "~0.11.1", default_features = false}
miniproj-ops= {version="0.6.0", path="../miniproj-ops"}